force-app/main/default/objects/HAM_Naming_Opportunity_Affiliation__c/HAM_Naming_Opportunity_Affiliation__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect constituents and organizations to assets</description>
    <label>Naming Opportunity Affiliation</label>
    <nameField>
        <displayFormat>NOA-{0000000}</displayFormat>
        <label>Naming Opportunity Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Naming Opportunity Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>