force-app/main/default/objects/HAM_Naming_Opportunity_Affiliation__c/fields/HAM_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Naming Opportunity Affiliations</relationshipLabel>
    <relationshipName>Naming_Opportunity_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>