force-app/main/default/objects/HAM_Naming_Opportunity_Affiliation__c/fields/HAM_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Honoree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>