force-app/main/default/objects/HAM_Naming_Opportunity_Affiliation__c/fields/HAM_External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_External_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>HAM External System ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>