force-app/main/default/objects/HAM_Naming_Opportunity_Affiliation__c/fields/HAM_Naming_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HAM_Naming_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Naming Opportunity</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Naming Opportunity Affiliations</relationshipLabel>
    <relationshipName>Naming_Opportunity_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>