force-app/main/default/objects/HAM_Naming_Opportunity_Affiliation__c/fields/HAM_Plaque_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Plaque_Type__c</fullName>
    <label>Plaque Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bench</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Tree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>